--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buscador de Precios</title>
+    <title>Buscador de Precios - CV Tools</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img src="img/cvtools.png" alt="CV Tools Logo" class="main-logo">
+    </header>
+
     <div class="container">
         <h1>Buscador de Precios</h1>
         <input type="text" id="searchInput" placeholder="Buscar por referencia o descripción...">
         <div id="resultsContainer"></div>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
