--- a/index.html
+++ b/index.html
@@ -16,20 +16,23 @@
         <main class="menu-grid">
             <a href="precios.html" class="menu-card">
                 <h2>Buscador de Precios</h2>
-                <p>Consulta los precios actualizados por referencia o descripción.</p>
+                <p>Consulta los precios actualizados por referencia o descripción de cada uno de los grupos de compras.</p>
             </a>
             <a href="garantias.html" class="menu-card">
-                <h2>Gestión de Garantías</h2>
+                <h2>Gestión de reclamaciones y garantías</h2>
                 <p>Instrucciones para la gestión de reclamaciones de clientes.</p>
             </a>
             <a href="tarifas.html" class="menu-card">
                 <h2>Descarga de Tarifas</h2>
-                <p>Descarga las listas de precios completas en Excel o PDF.</p>
+                <p>Descarga las listas de precios completas en PDF.</p>
             </a>
             <a href="#" class="menu-card placeholder">
                 <h2>Próximamente</h2>
                 <p>Nuevas herramientas y recursos para facilitar tu trabajo.</p>
+                <p>Esta es una herramienta colaborativa. Agradecemos que planteen posibles mejoras.</p><br>
+                
             </a>
+                <p>Powered by CV Tools. Todos los derechos reservados</p>
         </main>
     </div>
 </body>
