Add footer with copyright notice to index.html

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
                 <h2>Próximamente</h2>
                 <p>Nuevas herramientas y recursos para facilitar tu trabajo.</p>
                 <p>Esta es una herramienta colaborativa. Agradecemos que planteen posibles mejoras.</p><br>
-                
             </a>
-                <p>Powered by CV Tools. Todos los derechos reservados</p>
         </main>
+        <footer>
+            <p class="footer-text">&copy; 2025 CV Tools. Todos los derechos reservados.</p>
+        </footer>
     </div>
 </body>
 </html>
