--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#" class="menu-card placeholder">
                 <h2>Próximamente</h2>
                 <p>Nuevas herramientas y recursos para facilitar tu trabajo.</p>
-                <p>Esta es una herramienta colaborativa. Agradecemos que planteen posibles mejoras.</p><br>
+                <p>Esta es una herramienta colaborativa. Agradecemos planteen posibles mejoras.</p><br>
             </a>
         </main>
         <footer>
