Subimos lógica para descarga en excel

--- a/tarifas.html
+++ b/tarifas.html
@@ -15,8 +15,23 @@
 
         <main>
             <div class="content-box">
-                <h2>Generar y Descargar Tarifas en PDF</h2>
-                <p>Crea un PDF al instante con los precios actualizados y desglosados para cada grupo. La generación puede tardar unos segundos.</p>
+                <h2>Opción 1: Descarga en formato Excel (.xlsx)</h2>
+                <p>Descarga la tarifa completa en un archivo Excel. Estos enlaces siempre proporcionan la versión más reciente de los datos.</p>
+                
+                <!-- IMPORTANTE: REEMPLAZA ESTOS ENLACES CON LOS 8 QUE HAS GENERADO -->
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=351635619#gid=351635619" class="download-button excel">Excel Tarifa General</a>
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=50344024#gid=50344024" class="download-button excel">Excel Tarifa BigMat</a>
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=2023173679#gid=2023173679" class="download-button excel">Excel Tarifa Neopro</a>
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1722640965#gid=1722640965" class="download-button excel">Excel Tarifa Ehlis</a>
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1182020552#gid=1182020552" class="download-button excel">Excel Tarifa Cecofersa</a>
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1137452250#gid=1137452250" class="download-button excel">Excel Tarifa Synergas</a>
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=372256826#gid=372256826" class="download-button excel">Excel Tarifa Grandes Cuentas</a>
+                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1356324811#gid=1356324811" class="download-button excel">Excel Tarifa Coferdroza</a>
+            </div>
+
+            <div class="content-box">
+                <h2>Opción 2: Generar y Descargar en formato PDF</h2>
+                <p>Crea un PDF al instante con una tabla de precios desglosada y lista para enviar. La generación puede tardar unos segundos.</p>
                 <button id="pdf-general" class="download-button pdf">PDF Tarifa General</button>
                 <button id="pdf-bigmat" class="download-button pdf">PDF Tarifa BigMat</button>
                 <button id="pdf-neopro" class="download-button pdf">PDF Tarifa Neopro</button>
@@ -35,7 +50,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
     
-    <!-- Nuestro script para las tarifas -->
     <script src="tarifas.js"></script>
 </body>
 </html>
