Cambiamos enlaces Excel para que sean públicos

--- a/tarifas.html
+++ b/tarifas.html
@@ -19,14 +19,14 @@
                 <p>Descarga la tarifa completa en un archivo Excel. Estos enlaces siempre proporcionan la versión más reciente de los datos.</p>
                 
                 <!-- IMPORTANTE: REEMPLAZA ESTOS ENLACES CON LOS 8 QUE HAS GENERADO -->
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=351635619#gid=351635619" class="download-button excel">Excel Tarifa General</a>
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=50344024#gid=50344024" class="download-button excel">Excel Tarifa BigMat</a>
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=2023173679#gid=2023173679" class="download-button excel">Excel Tarifa Neopro</a>
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1722640965#gid=1722640965" class="download-button excel">Excel Tarifa Ehlis</a>
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1182020552#gid=1182020552" class="download-button excel">Excel Tarifa Cecofersa</a>
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1137452250#gid=1137452250" class="download-button excel">Excel Tarifa Synergas</a>
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=372256826#gid=372256826" class="download-button excel">Excel Tarifa Grandes Cuentas</a>
-                <a href="https://docs.google.com/spreadsheets/d/1DhbKMFnJCfqO9ujj9d4Z8eezPCAPth0nZ0qPMMcWLbQ/edit?gid=1356324811#gid=1356324811" class="download-button excel">Excel Tarifa Coferdroza</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa General</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa BigMat</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Neopro</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Ehlis</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Cecofersa</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Synergas</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Grandes Cuentas</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Coferdroza</a>
             </div>
 
             <div class="content-box">
