Cambiamos tarifa general excel

--- a/tarifas.html
+++ b/tarifas.html
@@ -19,7 +19,7 @@
                 <p>Descarga la tarifa completa en un archivo Excel. Estos enlaces siempre proporcionan la versión más reciente de los datos.</p>
                 
                 <!-- IMPORTANTE: REEMPLAZA ESTOS ENLACES CON LOS 8 QUE HAS GENERADO -->
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa General</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=351635619&single=true&output=tsv" class="download-button excel">Excel Tarifa General</a>
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa BigMat</a>
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Neopro</a>
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Ehlis</a>
