--- a/tarifas.html
+++ b/tarifas.html
@@ -20,13 +20,13 @@
                 
                 <!-- IMPORTANTE: REEMPLAZA ESTOS ENLACES CON LOS 8 QUE HAS GENERADO -->
                 <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=351635619&single=true&output=tsv" class="download-button excel">Excel Tarifa General</a>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa BigMat</a>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Neopro</a>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Ehlis</a>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Cecofersa</a>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Synergas</a>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Grandes Cuentas</a>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?output=xlsx" class="download-button excel">Excel Tarifa Coferdroza</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=50344024&single=true&output=tsv" class="download-button excel">Excel Tarifa BigMat</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=2023173679&single=true&output=tsv" class="download-button excel">Excel Tarifa Neopro</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=1722640965&single=true&output=tsv" class="download-button excel">Excel Tarifa Ehlis</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=1182020552&single=true&output=tsv" class="download-button excel">Excel Tarifa Cecofersa</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=1137452250&single=true&output=tsv" class="download-button excel">Excel Tarifa Synergas</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=372256826&single=true&output=tsv" class="download-button excel">Excel Tarifa Grandes Cuentas</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQlPJiZhA4iVRzu6aJdMqf0yUHfE-MGwwt40BMuB8zmeAzDeZ4oDA8TJaAsyiVfLHOnO2s78rsc1Jez/pub?gid=1356324811&single=true&output=tsv" class="download-button excel">Excel Tarifa Coferdroza</a>
             </div>
 
             <div class="content-box">
