Implementamos js para fichas técnicas

--- a/index.html
+++ b/index.html
@@ -10,31 +10,27 @@
     <div class="container">
         <header>
             <img src="img/cvtools.png" alt="CV Tools Logo" class="main-logo">
-            <h1>Portal de Herramientas Red Comercial</h1>
+            <h1>Portal de Herramientas</h1>
         </header>
 
         <main class="menu-grid">
             <a href="precios.html" class="menu-card">
-                <h2>Buscador de Precios</h2>
-                <p>Consulta los precios actualizados por referencia o descripción de cada uno de los grupos de compras.</p>
+                <h2>Buscador de Precios y Fichas Técnicas</h2>
+                <p>Consulta precios y descarga fichas técnicas por referencia o descripción.</p>
             </a>
             <a href="garantias.html" class="menu-card">
-                <h2>Gestión de reclamaciones y garantías</h2>
+                <h2>Gestión de Garantías</h2>
                 <p>Instrucciones para la gestión de reclamaciones de clientes.</p>
             </a>
             <a href="tarifas.html" class="menu-card">
                 <h2>Descarga de Tarifas</h2>
-                <p>Descarga las listas de precios completas en PDF.</p>
+                <p>Genera y descarga las listas de precios completas en formato PDF.</p>
             </a>
             <a href="#" class="menu-card placeholder">
                 <h2>Próximamente</h2>
                 <p>Nuevas herramientas y recursos para facilitar tu trabajo.</p>
-                <p>Esta es una herramienta colaborativa. Agradecemos planteen posibles mejoras.</p><br>
             </a>
         </main>
-        <footer>
-            <p class="footer-text">&copy; 2025 CV Tools. Todos los derechos reservados.</p>
-        </footer>
     </div>
 </body>
 </html>
