--- a/precios.html
+++ b/precios.html
@@ -15,6 +15,19 @@
 
         <main>
             <div id="search-wrapper">
+                 <div class="tariff-selector-wrapper">
+                    <label for="tariffSelector">Selecciona una Tarifa:</label>
+                    <select id="tariffSelector">
+                        <option value="Tarifa_General.json" selected>Tarifa General</option>
+                        <option value="Tarifa_Bigmat.json">Tarifa BigMat</option>
+                        <option value="Tarifa_Neopro.json">Tarifa Neopro</option>
+                        <option value="Tarifa_Ehlis.json">Tarifa Ehlis</option>
+                        <option value="Tarifa_Cecofersa.json">Tarifa Cecofersa</option>
+                        <option value="Tarifa_Synergas.json">Tarifa Synergas</option>
+                        <option value="Tarifa_Grandes_Cuentas.json">Tarifa Grandes Cuentas</option>
+                        <option value="Tarifa_Coferdroza.json">Tarifa Coferdroza</oion>
+                    </select>
+                 </div>
                  <input type="text" id="searchInput" placeholder="Buscar por referencia o descripción...">
             </div>
     
