--- a/index.html
+++ b/index.html
@@ -14,23 +14,32 @@
         </header>
 
         <main class="menu-grid">
-            <a href="precios.html" class="menu-card">
-                <h2>Buscador de Precios y Fichas Técnicas</h2>
-                <p>Consulta precios y descarga fichas técnicas por referencia o descripción.</p>
+            <a href="precios.html" class="menu-card card-1">
+                <h2>Buscador de Precios</h2>
+                <p>Consulta los precios actualizados por referencia o descripción.</p>
             </a>
-            <a href="garantias.html" class="menu-card">
+            <a href="garantias.html" class="menu-card card-2">
                 <h2>Gestión de Garantías</h2>
                 <p>Instrucciones para la gestión de reclamaciones de clientes.</p>
             </a>
-            <a href="tarifas.html" class="menu-card">
+            <a href="tarifas.html" class="menu-card card-3">
                 <h2>Descarga de Tarifas</h2>
                 <p>Genera y descarga las listas de precios completas en formato PDF.</p>
             </a>
-            <a href="#" class="menu-card placeholder">
+            <a href="#" class="menu-card card-4 placeholder">
                 <h2>Próximamente</h2>
                 <p>Nuevas herramientas y recursos para facilitar tu trabajo.</p>
             </a>
         </main>
+
+        <footer class="site-footer">
+            <p>&copy; <span id="year"></span> CVTools. Todos los derechos reservados.</p>
+        </footer>
     </div>
+
+    <script>
+        // Script para actualizar el año del copyright automáticamente
+        document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
