Subimos lógica para descargar fichas técnicas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
         <main class="menu-grid">
             <a href="precios.html" class="menu-card card-1">
                 <h2>Buscador de Precios</h2>
-                <p>Consulta los precios actualizados por referencia o descripción.</p>
+                <p>Consulta las tarifas y precios actualizados de los productos.</p>
+            </a>
+            <a href="fichas.html" class="menu-card card-5">
+                <h2>Buscador de Fichas Técnicas</h2>
+                <p>Encuentra y descarga las fichas técnicas por referencia o descripción.</p>
             </a>
             <a href="garantias.html" class="menu-card card-2">
                 <h2>Gestión de Garantías</h2>
@@ -26,10 +30,6 @@
                 <h2>Descarga de Tarifas</h2>
                 <p>Genera y descarga las listas de precios completas en formato PDF.</p>
             </a>
-            <a href="#" class="menu-card card-4 placeholder">
-                <h2>Próximamente</h2>
-                <p>Nuevas herramientas y recursos para facilitar tu trabajo.</p>
-            </a>
         </main>
 
         <footer class="site-footer">
@@ -38,7 +38,6 @@
     </div>
 
     <script>
-        // Script para actualizar el año del copyright automáticamente
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
 </body>
