--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
                 <h2>Buscador de Fichas Técnicas</h2>
                 <p>Encuentra y descarga las fichas técnicas por referencia o descripción.</p>
             </a>
-            <a href="garantias.html" class="menu-card card-2">
-                <h2>Gestión de Garantías</h2>
-                <p>Instrucciones para la gestión de reclamaciones de clientes.</p>
+            <a href="https://drive.google.com/file/d/1hGIb-8DpEWCIAgVW5xJ3a23ugO5PZuOO/view?usp=sharing" class="menu-card card-6" target="_blank">
+                <h2>Descarga de Catálogo</h2>
+                <p>Descarga el catálogo general completo de productos en formato PDF.</p>
             </a>
             <a href="tarifas.html" class="menu-card card-3">
                 <h2>Descarga de Tarifas</h2>
                 <p>Genera y descarga las listas de precios completas en formato PDF.</p>
+            </a>
+            <a href="garantias.html" class="menu-card card-2">
+                <h2>Gestión de Garantías</h2>
+                <p>Instrucciones para la gestión de reclamaciones de clientes.</p>
+            </a>
+            <a href="#" class="menu-card placeholder">
+                <h2>Próximamente</h2>
+                <p>Nuevas herramientas y recursos para facilitar tu trabajo.</p>
             </a>
         </main>
 
